# telegram-medical-data-pipeline

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  FASTAPI_SETUP.md  README.md  dagster.yaml  debug_server.py  docker-compose.yml  env_template.txt  init.sql  pyproject.toml  quick_test.py  requirements.txt  restart_server.py  start_fastapi.py  test_db_connection.py  test_fastapi.py  test_notebook_fixes.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  security.yml
dags/: telegram_pipeline.py
data/processed/: .gitkeep
data/raw/: .gitkeep
dbt/: README.md  create_models.sql  dbt_project.yml  profiles.yml  run_models.py  run_sql_script.py  test_connection.py
dbt/macros/: generate_docs.sql
dbt/models/: sources.yml
dbt/models/marts/: fct_medical_insights.sql
dbt/models/staging/: stg_enriched_messages.sql  stg_raw_messages.sql
dbt/tests/: test_messages_have_channel_name.sql
docs/: CI_CD_SETUP.md  DAGSTER_SETUP.md  TELEGRAM_SCRAPER_SETUP.md
fastapi_app/: README.md  check_db.py  crud.py  database.py  env_template.txt  main.py  main_new.py  models.py  requirements.txt  requirements_minimal.txt  schemas.py  start.py  test_api.py
notebooks/: dagster.ipynb  enrichment.ipynb  fastAPI.ipynb  model.ipynb  scraping.ipynb  transform.ipynb
scripts/: README_telegram_loader.md  install_dbt.py  load_telegram_messages.py  run_scraper.py  setup_database.py  test_dagster.py  test_db_connection.py  test_json_fix.py  test_paths.py  test_scraper.py  test_telegram_connection.py  yolo_image_detection.py
src/: __init__.py
src/dbt_runner/: __init__.py  dbt_executor.py
src/enrich/: __init__.py  yolo_enricher.py
src/loader/: __init__.py  postgres_loader.py
src/scraper/: __init__.py  telegram_scraper.py
src/utils/: config.py
tests/: test_loader.py  test_scraper.py
venv310/Scripts/: activate  activate.bat  daff.py
venv312/: pyvenv.cfg
venv312/Scripts/: activate  activate.bat
